@@ -99,6 +99,7 @@ CREATE TABLE tx_quickshop_products (
   stockmanagement tinyint(3) DEFAULT '0' NOT NULL,
   quantity_min int(11) DEFAULT '0' NOT NULL,
   quantity_max int(11) DEFAULT '0' NOT NULL,
+  weight double(11,2) DEFAULT '0.00' NOT NULL,
 
   datasheet text,
   cols int(11) DEFAULT '0' NOT NULL,
